--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "scripts": {
         "upgrade": "npx npm-check-updates --upgrade",
-        "format": "prettier --write --config=.prettierrc.yaml \"src/**/*.ts\"",
+        "format": "prettier --write --config=.prettierrc.yaml \"src/**/*.ts\" && eslint --fix \"src/**/*.ts\"",
         "build": "rm -rf dist && tsc --project tsconfig.json",
         "start": "node dist/main",
         "test": "jest"
@@ -39,6 +39,7 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
         "jest": "^29.0.3",
+        "mongodb-memory-server": "^8.9.2",
         "prettier": "^2.7.1",
         "ts-jest": "^29.0.1",
         "typescript": "^4.8.3"
