--- a/frontend/analysis_options.yaml
+++ b/frontend/analysis_options.yaml
@@ -2,6 +2,7 @@ include: package:flutter_lints/flutter.yaml
 
 analyzer:
   exclude: [build/**]
+
   language:
     strict-casts: true
     strict-inference: true
@@ -10,3 +11,4 @@ analyzer:
 linter:
   rules:
     prefer_single_quotes: true
+    avoid_web_libraries_in_flutter: false
